--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Driven Eats</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="container">
         <div class="topo">
-            
+           <div class="plataforma">DrivenEats</div>
+           <div class="slogan">Sua comida em 6 minutos</div>
         </div>
+
     </div>
 </body>
 
